force-app/main/default/objects/SpringProject_Project__c/fields/SpringProject_Program__c.field-meta.xml
<CustomField>
    <fullName>SpringProject_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SpringProject-Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipName>SpringProject_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>