force-app/main/default/objects/SpringProject_Project__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Manager</description>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectszBKX</relationshipName>
    <type>Lookup</type>
</CustomField>